[gd_scene load_steps=2 format=3 uid="uid://dvdgjkiw7fh1i"]

[ext_resource type="Script" uid="uid://d3h7jilgl0hsa" path="res://scenes/common/ResultsScreen.gd" id="1_gilnc"]

[node name="ResultScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gilnc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DetailsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Zurück zum Hauptmenü"
